Fixed gap between navbar and added font.

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ body{
     justify-content: space-between;
     background-color: transparent;
     padding-inline: 1rem;
-    border-bottom: 1px solid black;
-    
+    background-color: #ffffff;
+    box-shadow: 0 3px 6px #000000b4;
 }
 
 .shopping-cart{
@@ -18,6 +18,7 @@ body{
 
 .logo > img {
     width: 50px;
+    padding: 7px;
 }
 
 nav > ul{
@@ -30,7 +31,8 @@ nav > ul{
 .nav-link{
     color: #606060;
     font-size: 18px;
-    font-weight: 500;
+    font-family: "Roboto", sans-serif;
+    font-weight: 600;
     text-decoration: none;
 }
 
@@ -40,33 +42,67 @@ nav > ul{
 
 .hero{
     background-image: url(../images/pexels-jddaniel-2385477.jpg);
-    background-color: rgba(40, 39, 39, 0.65);
+    background-color: rgba(40, 39, 39, 0.678);
     background-blend-mode: darken;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     position: relative;
-    height: 120vh;
+    height: 100vh;
     width: 100%;
-    margin-top: -16px;
+    margin-bottom: 20px;
 }
 .hero-text{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 500px;
-    color: white;
+    max-width: 600px;
     padding: 5rem;
 }
 
 .hero-text h1{
     text-transform: uppercase;
-    font-size: 47px;
-    font-weight: bolder;
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-size: 60px;
+    font-style: italic;
+    font-weight: 900;
+    margin-bottom: 20px;
 }
 
 .hero-text > p{
-    font-size: 17px;
-    color: #d5d5d5;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    color: #9b9898;
+}
+
+.feel-the-difference {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 50vh;
+    background-color: #ffffff;
+}
+
+.feel-the-difference h1 {
+    margin-bottom: 50px;
+}
+
+.feel-the-difference .text-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.best-sellers {
+    height: 80vh;
+    background-color: rgb(240, 240, 240);
+}
+
+Footer {
+    height: 25vh;
+    background-color: rgb(250, 250, 250);
 }
